--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,3 +10,61 @@
 
     --font-Bai : 'Bai Jamjuree', sans-serif;
 }
+.container {
+    display: grid;
+    width: 100vw;
+    font-family: var(--font-Bai);
+}
+.header {    
+    background: bottom center no-repeat url(/images/bg-header-desktop.png);
+    background-size: cover;
+    text-align: center;
+}
+.img-logo {
+    margin-top: 90px;
+    margin-bottom: 50px;
+}
+.title {
+    font-size: xx-large;    
+    font-weight: 600;
+    color: var(--Dark-Grayish-Blue);
+    margin-bottom: 20px;
+}
+.txt-title {
+    width: 50%;
+    margin: 20px auto;
+    color: var(--Grayish-Blue);
+}
+.btn-container {
+    width: 50%;
+    margin: 30px auto;
+}
+.btn-ios {
+    background-color: var(--Strong-Cyan);
+    border: none;
+    border-radius: 20px;
+    padding: 12px 44px;
+    font-weight: 400;
+    color: #fff;
+    box-shadow: 0px 3px 0px 0px rgba(38,112,101,1);
+}
+.btn-mac {
+    background-color: var(--Light-Blue);
+    border: none;
+    border-radius: 20px;
+    padding: 12px 44px;
+    font-weight: 400;
+    color: #fff;
+    box-shadow: 0px 3px 0px 0px rgba(62,80,199,1);
+    margin-left: 20px;
+}
+
+
+
+/*mobile*/
+@media (max-width : 375px) {
+    .header {
+        background: bottom center no-repeat url(/images/bg-header-mobile.png);
+        background-size: cover; 
+    }
+}
