--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,6 +48,10 @@
     color: #fff;
     box-shadow: 0px 3px 0px 0px rgba(38,112,101,1);
 }
+.btn-ios:hover {
+    opacity: .5;
+    cursor: pointer;
+}
 .btn-mac {
     background-color: var(--Light-Blue);
     border: none;
@@ -57,6 +61,10 @@
     color: #fff;
     box-shadow: 0px 3px 0px 0px rgba(62,80,199,1);
     margin-left: 20px;
+}
+.btn-mac:hover {
+    opacity: .5;
+    cursor: pointer;
 }
 .sub-title {
     color: var(--Dark-Grayish-Blue);
@@ -113,9 +121,93 @@
     color: var(--Grayish-Blue);
     width: 50%;
 }
-.access-clipboard {
+.access-clipboard {    
+    text-align: center;
+}
+.access-clipboard h2 {
+    color: var(--Dark-Grayish-Blue);
+    font-size: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.access-clipboard p {
+    color: var(--Dark-Grayish-Blue);
+    margin: 30px auto;
+}
+.img-devices img {
+    width: 50%;
+}
+.supercharge {
     
     text-align: center;
+}
+.supercharge h2 {
+    color: var(--Dark-Grayish-Blue);
+    font-size: xx-large;
+    margin: 40px auto;
+}
+.content-box {
+    display: flex;
+    width: 60%;
+    margin: 50px auto;
+}
+.create-blacklist img {
+    margin-bottom: 30px;
+} 
+.plain-text img {
+    margin-bottom: 30px;
+} 
+.snake-preview img {
+    margin-bottom: 30px;
+}
+.create-blacklist h4 {
+    color: var(--Dark-Grayish-Blue);
+    margin-bottom: 30px;
+}
+.snake-preview h4 {
+    color: var(--Dark-Grayish-Blue);
+    margin-bottom: 30px;
+}
+.plain-text h4 {
+    color: var(--Dark-Grayish-Blue);
+    margin-bottom: 30px;
+}
+ 
+.logos-partners {
+    display: flex;
+    margin: 98px auto;
+    align-items: center;
+    justify-content: space-around;
+    width: 70%;
+}
+.clipboard {
+    text-align: center;
+}
+.clipboard h3 {
+    color: var(--Dark-Grayish-Blue);
+    margin-bottom: 35px;
+    font-size: xx-large;
+}
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 90px;
+    margin-bottom: 90px;
+}
+.container-footer {
+   display: contents; 
+}
+.container-footer p:hover {
+    color: var(--Strong-Cyan);
+    cursor: pointer;
+}
+.logo-footer img {
+    width: 30%;
+}
+.social img:hover {
+    background-color: var(--Strong-Cyan);
+    cursor: pointer;
 }
 
 /*mobile*/
