--- a/css/estilos.css
+++ b/css/estilos.css
@@ -239,9 +239,8 @@
         justify-content: space-evenly;
     }
     .btn-ios {
-        width: 100vw;
         margin-bottom: 50px;
-        font-size: 2rem;
+        font-size: 1.5rem;
         background-color: var(--Strong-Cyan);
         border: none;
         border-radius: 47px;
@@ -250,10 +249,9 @@
         color: #fff;
         box-shadow: 0px 3px 0px 0px rgb(38 112 101);
     }
-    .btn-mac {
-        width: 100vw;
+    .btn-mac {     
         margin-bottom: 50px;
-        font-size: 2rem;
+        font-size: 1.5rem;
         background-color: var(--Light-Blue);
         border: none;
         border-radius: 47px;
@@ -280,6 +278,7 @@
     .content-text {
         display: block;
         text-align: center;
+        margin: 70px auto;    
     }
     .img-datos {
         display: block;
@@ -313,5 +312,113 @@
         margin: 30px auto;
         font-size: 1.6rem;
         line-height: 2.5rem; 
+    }
+    .clipboard {
+        margin: 70px auto;
+    }
+    .access-clipboard h2 {
+        font-size: 4rem;
+        font-weight: 600;
+    }
+    .access-clipboard p {
+        font-size: 1.5rem;
+        margin: 30px 120px;
+        line-height: 3rem;
+    }
+    .img-devices img {
+        margin-top: 40px;
+        width: 70%;
+    }
+    .supercharge h2 {
+        margin-top: 157px;
+        font-size: 4rem;
+        font-weight: 600;
+    } 
+    .supercharge p {
+        font-size: 2rem;
+        margin: 20px 25px;
+        color: var(--Dark-Grayish-Blue)
+    }
+    .content-box {
+        flex-direction: column;
+    } 
+    .create-blacklist img {
+        margin-top: 90px;
+        margin-bottom: 30px;
+        width: 30%;
+    }
+    .create-blacklist h4 {
+        font-size: 3rem;
+        font-weight: 600;
+    } 
+    .supercharge p {        
+        line-height: 2.5rem;
+        font-size: 1.4rem;
+    } 
+    .plain-text img {
+        margin-top: 90px;
+        margin-bottom: 30px;
+        width: 30%;
+    }
+    .plain-text h4 {
+        font-size: 3rem;
+        font-weight: 600;
+    }
+    .plain-text p {
+        width: 100%;
+        line-height: 2.5rem;
+        font-size: 1.4rem;
+    }
+    .snake-preview img {
+        margin-top: 90px;
+        margin-bottom: 30px;
+        width: 30%;
+    }
+    .snake-preview h4 {
+        font-size: 3rem;
+        font-weight: 600;
+    }
+    .snake-preview p {
+        width: 100%;
+        line-height: 2.5rem;
+        font-size: 1.4rem;
+    }
+    .logos-partners {
+        display: block;
+        width: 100%;
+        margin: 20px auto;
+    }
+    .logos-partners > img {
+        width: 70%;
+        height: 70px;
+        margin-bottom: 80px;
+    }
+    .footer {
+        display: block;
+        text-align: center;
+        margin-bottom: 0;
+    }
+    .logo-footer img {
+        width: 12%;
+        margin-top: 60px;
+        margin-bottom: 60px;
+    }
+    .container-footer p {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .social {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .social img {
+        display: flex;
+        flex-direction: row;
+        align-content: space-around;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-bottom: 20px;
+    }
     }
 }    
